--- a/app/templates/config/rubro_form.html
+++ b/app/templates/config/rubro_form.html
@@ -7,7 +7,8 @@
 <nav aria-label="breadcrumb" class="mb-3">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ url_for('main.dashboard') }}">Inicio</a></li>
-        <li class="breadcrumb-item"><a href="{{ url_for('config.lista_rubros') }}">Configuración - Rubros</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('config.index') }}">Configuración</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('config.lista_rubros') }}">Rubros</a></li>
         <li class="breadcrumb-item active" aria-current="page">{{ titulo }}</li>
     </ol>
 </nav>
